# Jetson-MFRC522

./: CODE_OF_CONDUCT.md  README.md  setup.cfg  setup.py
src/Jetson_MFRC522/: MFRC522.py  SimpleMFRC522.py
src/Jetson_MFRC522.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
