[metadata]
name = Jetson-MFRC522
version = 1.0.0
author = Fabian Alvarez
author_email = support@fabianalvarez.dev
description = RFID reader for Jetson Nano
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SantaCRC/Jetson-MFRC522
project_urls =
    Bug Tracker = https://github.com/SantaCRC/Jetson-MFRC522/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src